src/App.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    color: rgba(0, 0, 0, 0.7);
    font-family: Avenir, Helvetica, Arial, sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;

    --navbar-height: max(10vh, 5rem);

    /* outline: solid 0.1rem red; */
}

.page {
    min-height: 100vh;
    padding: 1vw 2vw;
    position: relative;
    padding-top: calc(var(--navbar-height) + 1rem);
    background-color: #f7f7ff;
}

.container {
    display: flex;
    justify-content: space-between;
    margin: auto;
    width: 95%;
}

input {
    outline: 0.1rem solid beige;
    border: none;
    padding: 0.5rem;
    border-radius: 0.5rem;
}

ul li {
    list-style: none;
}

.content {
    width: 60%;
    display: flex;
    flex-direction: column;
    gap: 1vw;
    padding-bottom: 10vw;
}

.sidebar {
    background-color: red;
}

.display-none {
    display: none;
}

/* STYLING THE SCROLL BAR */
/* https://www.digitalocean.com/community/tutorials/css-scrollbars */

/* Works on Firefox */
* {
    scrollbar-width: thin;
    scrollbar-color: #7fffd4 beige;
  }
  
  /* Works on Chrome, Edge, and Safari */
  *::-webkit-scrollbar {
    width: 0.8rem;
  }
  
  *::-webkit-scrollbar-track {
    background: beige;
  }
  
  *::-webkit-scrollbar-thumb {
    background-color: aquamarine;
    border-radius: 1.25rem;
    border: 0.1875rem solid beige;
  }

@media only screen and (max-width: 55rem) {
    :root {
        font-size: 14px;
    }

    .sidebar {
        display: none;
    }

    .content {
        width: 90vw;
    }
}

